--- a/arch/arm/configs/aries_defconfig
+++ b/arch/arm/configs/aries_defconfig
@@ -250,6 +250,7 @@ CONFIG_BT_BNEP_PROTO_FILTER=y
 CONFIG_BT_HIDP=y
 # CONFIG_MSM_BT_POWER is not set
 CONFIG_CFG80211=y
+CONFIG_CFG80211_INTERNAL_REGDB=y
 # CONFIG_CFG80211_WEXT is not set
 CONFIG_RFKILL=y
 CONFIG_GENLOCK=y
